## (This file will be cleaned up before release.)

- Mnogosearch extension updated. Now can compile with mnogosearch-3.2.11+
- Moved extensions to PECL (http://pear.php.net/): (James, Tal)
  . ext/fribidi

- New php.ini options:
  . "session.hash_function" and "session.hash_bits_per_character". (Sascha)
  . "mail.force_extra_paramaters". (Derick)

- Improved streams support: (Wez)
  . stream_socket_client() - similar to fsockopen(), but more powerful. 
  . stream_socket_server() - Creates a server socket. 
  . stream_socket_accept() - Accept a client connection.
  . stream_socket_get_name() - Get local or remote name of socket.
  . stream_copy_to_stream()
  . stream_get_line() - Reads either the specified number of bytes or until 
    the ending string is found. (Ilia)
  . Added generic crypto interface for streams.
    (supports dynamic loading of OpenSSL)
  . Improved performance of readfile(), fpassthru() and some internal streams
    operations under Win32.
  . Added lightweight streaming input abstraction to the Zend Engine scanners
    to provide uniform support for include()'ing data from PHP streams across
    all platforms.
  . Added 'string.base64' stream filter. (Moriyoshi)
  . Renamed stream_register_wrapper() to stream_wrapper_register(). (Derick)

- Improved GD extension: (Pierre-Alain Joye, Ilia)
   . imagefilter() - Apply different filters to image.
    (Only available with bundled GD library)
   . Antialiased drawing support:
     o imageantialias() - (de)active antialias
     o imageline() and imagepolygon() antialias support

- Changed the length parameter in fgetss() to be optional. (Moriyoshi)
- Changed ini parser to allow for handling of quoted multi-line values. (Ilia)
- Changed get_extension_funcs() to return list of the built-in Zend Engine 
  functions if "zend" is specified as the module name. (Ilia)
- Changed array_search() to accept also objects as a needle. (Moriyoshi)